package de.exxcellent.challenge.datatable;

/**
 * {@link Column} with data type {@link Double}
 */
public class NumericalColumn extends Column<Double>{

    public NumericalColumn(Double[] values) {
        super(values);
    }

}
