package de.exxcellent.challenge.datatable;

/**
 * Source that provides a {@link DataTable}
 */
public interface TableSource {

    DataTable getData();

}

